fix small mobile spacing issue

--- a/static/styles/src/components/_skill-list.scss
+++ b/static/styles/src/components/_skill-list.scss
@@ -2,10 +2,10 @@
   // list-style-type: none;
   padding: 10px 20px 0 20px;
 
-  @media (max-width: $screen-xs-max) {
-    padding-left: 10px;
-    padding-right: 10px;
-  }
+  // @media (max-width: $screen-xs-max) {
+  //   padding-left: 20px;
+  //   padding-right: 20px;
+  // }
 
   > li {
     clear: both;
